# BinderInNative

./: README.md  settings.gradle
app/: build.gradle
app/libs/arm64-v8a/: push.sh
app/src/androidTest/java/com/wyze/bindertest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/wyze/bindertest/: MainActivity.java
app/src/test/java/com/wyze/bindertest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
